@@ -24,15 +24,15 @@
 
 <Ui xmlns="http://www.blizzard.com/wow/ui/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.blizzard.com/wow/ui/ C:\Projects\WoW\Bin\Interface\FrameXML\UI.xsd">
 
-<Script file="AtlasQuest.lua" />
 <Script file="AtlasQuest_Instanzen.lua" />
 <Script file="AtlasQuest_Buttons.lua" />
 <Script file="AtlasQuest_OptionUI.lua" />
-<Script file="AtlasQuest_Items.lua" />
-<Script file="AtlasQuest_QuestIDs.lua" />
 <Script file="localization.en.lua" />
 <Script file="localization.de.lua" />
 <Script file="localization.cn.lua" />
+<Script file="AtlasQuest_Items.lua" />
+<Script file="AtlasQuest_QuestIDs.lua" />
+<Script file="AtlasQuest.lua" />
 
 -- Tooltip
 <GameTooltip name="AtlasQuestTooltip" inherits="GameTooltipTemplate" parent="UIParent" hidden="true"/>
